--- a/thanks.html
+++ b/thanks.html
@@ -16,7 +16,7 @@
         <i class="fa-regular fa-circle-check"></i>
         <h2>Thank You!</h2>
         <p>We appreciate your order! Thank you for trusting us with your purchase.Your order is on its way and we hope you love it.</p>
-        <a href="index.html" class="btn">Back To Home</a>
+        <a href="index.html" class="btn">Back To Home Page</a>
   
     </div>
 
