--- a/menu.html
+++ b/menu.html
@@ -347,7 +347,7 @@
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star-half-stroke"></i>
                 </div>   
-                <h 3> Plus</h3>
+                <h3>100 Plus</h3>
                 <a href="cart.html"><div class="btn">Order Now</div></a>
                 <span class="price">RM 3</span>
             </div>
