--- a/cart.html
+++ b/cart.html
@@ -17,7 +17,8 @@
                 <a href="index.html">Home</a>
                 <a href="menu.html">Menu</a>
                 <a href="review.html">Review</a>
-                <a href="cart.html"><i class="fa-solid fa-cart-shopping"></i></a>    
+                <a href="cart.html"><i class="fa-solid fa-cart-shopping"></i></a> 
+                <span id="count">0</span>   
             </nav>
             <form action="login.html">
                  <button class="logout-popup">Log Out</button>  
