--- a/review.html
+++ b/review.html
@@ -31,7 +31,7 @@
           <img src="about.png" alt="">
        <div>
            <h2>Best pizza in the country</h2>
-           <p>Welcome to our collection of America's best pizza – handpicked and taste-tested for pizza lovers who demand nothing less than perfection.
+           <p>Welcome to our collection of Malaysia's best pizza – handpicked and taste-tested for pizza lovers who demand nothing less than perfection.
               Whether you’re craving a crispy New York slice, a cheesy Chicago deep-dish, or a wood-fired masterpiece from the West Coast, 
               we’ve curated the top pizzerias that deliver unforgettable flavors.</p>
               <abbr title="">Let’s explore what makes these pizzerias stand out and why they’re considered the best pizza in the country.</abbr>
@@ -57,7 +57,7 @@
                </div>
            </div>   
        </div>
-    </section>   
+</section>   
 
 
 <section id="testimonials">
@@ -423,11 +423,12 @@
     </div>
 </section>
 
+
 <div class="footer">
 
     <div class="container">
 
-        <div class="boxs">
+        <div class="box">
             <h3>Quick links</h3>
             <a href="index.html"><i class="fa-solid fa-arrow-right"></i> Home</a>
             <a href="menu.html"><i class="fa-solid fa-arrow-right"></i> Menu</a>
@@ -436,7 +437,7 @@
             <a href="cart.html"><i class="fa-solid fa-arrow-right"></i> Cart</a>    
         </div>
 
-        <div class="boxs">
+        <div class="box">
             <h3>Contact info</h3>
             <a href="#"><i class="fa-solid fa-arrow-right"></i> 012-3456789</a>
             <a href="#"><i class="fa-solid fa-arrow-right"></i> 018-8888888</a>
@@ -444,7 +445,7 @@
             <a href="#"><i class="fa-solid fa-arrow-right"></i> csc@gmail.com</a>
         </div>
 
-        <div class="boxs">
+        <div class="box">
             <h3>Follow us</h3>
             <a href="#"><i class="fa-solid fa-arrow-right"></i> Facebook</a>
             <a href="#"><i class="fa-solid fa-arrow-right"></i> Instagram</a>
