--- a/review.html
+++ b/review.html
@@ -38,7 +38,7 @@
               
               <br><br>
    
-              <marquee background color="#ccc" loop="-1" scrollamount="5" width="100%">Get a pizza from our shop now!</marquee>
+              <marquee loop="-1" scrollamount="5" width="100%">Get a pizza from our shop now!</marquee>
    
             <div class="icons-container">
                <div class="icons">
